examples/test/testpolicy18225.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18225
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key12: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value32
          key37: value38
      podSelector:
        matchLabels:
          key15: value39
          key19: value0
          key37: value8
